--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "node_modules/.bin/browserify levelify.js -s Levelify | node_modules/.bin/uglifyjs -c > levelify.min.js",
+    "prebuild": "node_modules/.bin/babel levelify.js > levelify.min.js",
+    "build": "node_modules/.bin/browserify levelify.min.js -s Levelify | node_modules/.bin/uglifyjs -c > levelify.min.js",
     "test": "node_modules/.bin/tape tests/**/*.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "underscore": "^1.8.3"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "tape": "^4.4.0"
   }
